// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`option: isApp = true 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.js": "<PROJECT_ROOT>/.eslintrc.js",
        ".husky/pre-commit": "<PROJECT_ROOT>/.husky/pre-commit",
        ".husky/pre-push": "<PROJECT_ROOT>/.husky/pre-push",
        ".lintstagedrc.cjs": "<PROJECT_ROOT>/.lintstagedrc.cjs",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.js": "<PROJECT_ROOT>/.prettierrc.js",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
      "files": Array [
        ".husky/pre-commit",
        ".husky/pre-push",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.cjs",
        ".eslintrc.js",
        ".prettierrc.js",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
    },
    "makeDirs": Array [
      ".husky",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint.js": "<PROJECT_ROOT>/lib/files/eslint.js",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.cjs": "<PROJECT_ROOT>/lib/files/lint-staged.cjs",
        "lib/files/prettier.js": "<PROJECT_ROOT>/lib/files/prettier.js",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.cjs",
        "lib/files/eslint.js",
        "lib/files/prettier.js",
      ],
      "hash": Object {
        "lib/files/editorconfig": "c8e06355ec368086c1313bda19033a9e5d8a920d27dbf91a97fc509a0d2d8e3b",
        "lib/files/eslint.js": "fdb4499d6fbf4441b57b0e540a981c0db9f58023d756278d41d79a9292a544d2",
        "lib/files/ignore": "30904a5ebbd16be084eafa3241917ac38118d162dc5546f44a7ad05979cf0d80",
        "lib/files/lint-staged.cjs": "bc49af6b82be36d6b1ef246bd20ce41a5726b59701584ad6fc57ce28c8ea6785",
        "lib/files/prettier.js": "3930e922bf830746fe8261727a5f49eea3b93bb891955e46b56c78f9b9bbdf12",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "e4add719772b9da7940f03a22d607f8c8c86a543b9260739f9a8143b89007597",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "bd2849b7a84e41755e4c74b1a3d0640914f2cf1a1a4373640aa8d6308a3c53ee",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts --fix .",
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "resolve": Object {
    "@backtrack/preset-git-hooks": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib",
    "@backtrack/preset-style": "<PROJECT_ROOT>/lib",
  },
}
`;

exports[`option: node = true 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.js": "<PROJECT_ROOT>/.eslintrc.js",
        ".husky/pre-commit": "<PROJECT_ROOT>/.husky/pre-commit",
        ".husky/pre-push": "<PROJECT_ROOT>/.husky/pre-push",
        ".lintstagedrc.cjs": "<PROJECT_ROOT>/.lintstagedrc.cjs",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.js": "<PROJECT_ROOT>/.prettierrc.js",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
      "files": Array [
        ".husky/pre-commit",
        ".husky/pre-push",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.cjs",
        ".eslintrc.js",
        ".prettierrc.js",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
    },
    "makeDirs": Array [
      ".husky",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint-node.js": "<PROJECT_ROOT>/lib/files/eslint-node.js",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.cjs": "<PROJECT_ROOT>/lib/files/lint-staged.cjs",
        "lib/files/prettier.js": "<PROJECT_ROOT>/lib/files/prettier.js",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.cjs",
        "lib/files/eslint-node.js",
        "lib/files/prettier.js",
      ],
      "hash": Object {
        "lib/files/editorconfig": "c8e06355ec368086c1313bda19033a9e5d8a920d27dbf91a97fc509a0d2d8e3b",
        "lib/files/eslint-node.js": "00aed0fb026ab32804ce28d202a5e8ff43d5ef238ab938774c34b19fd6c1047b",
        "lib/files/ignore": "30904a5ebbd16be084eafa3241917ac38118d162dc5546f44a7ad05979cf0d80",
        "lib/files/lint-staged.cjs": "bc49af6b82be36d6b1ef246bd20ce41a5726b59701584ad6fc57ce28c8ea6785",
        "lib/files/prettier.js": "3930e922bf830746fe8261727a5f49eea3b93bb891955e46b56c78f9b9bbdf12",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "e4add719772b9da7940f03a22d607f8c8c86a543b9260739f9a8143b89007597",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "bd2849b7a84e41755e4c74b1a3d0640914f2cf1a1a4373640aa8d6308a3c53ee",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts --fix .",
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "prepublishOnly": Array [
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "resolve": Object {
    "@backtrack/preset-git-hooks": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib",
    "@backtrack/preset-style": "<PROJECT_ROOT>/lib",
  },
}
`;

exports[`preset returns expected config no options 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.js": "<PROJECT_ROOT>/.eslintrc.js",
        ".husky/pre-commit": "<PROJECT_ROOT>/.husky/pre-commit",
        ".husky/pre-push": "<PROJECT_ROOT>/.husky/pre-push",
        ".lintstagedrc.cjs": "<PROJECT_ROOT>/.lintstagedrc.cjs",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.js": "<PROJECT_ROOT>/.prettierrc.js",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
      "files": Array [
        ".husky/pre-commit",
        ".husky/pre-push",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.cjs",
        ".eslintrc.js",
        ".prettierrc.js",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".husky/pre-commit": false,
        ".husky/pre-push": false,
        ".lintstagedrc.cjs": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
    },
    "makeDirs": Array [
      ".husky",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint.js": "<PROJECT_ROOT>/lib/files/eslint.js",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.cjs": "<PROJECT_ROOT>/lib/files/lint-staged.cjs",
        "lib/files/prettier.js": "<PROJECT_ROOT>/lib/files/prettier.js",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.cjs",
        "lib/files/eslint.js",
        "lib/files/prettier.js",
      ],
      "hash": Object {
        "lib/files/editorconfig": "c8e06355ec368086c1313bda19033a9e5d8a920d27dbf91a97fc509a0d2d8e3b",
        "lib/files/eslint.js": "fdb4499d6fbf4441b57b0e540a981c0db9f58023d756278d41d79a9292a544d2",
        "lib/files/ignore": "30904a5ebbd16be084eafa3241917ac38118d162dc5546f44a7ad05979cf0d80",
        "lib/files/lint-staged.cjs": "bc49af6b82be36d6b1ef246bd20ce41a5726b59701584ad6fc57ce28c8ea6785",
        "lib/files/prettier.js": "3930e922bf830746fe8261727a5f49eea3b93bb891955e46b56c78f9b9bbdf12",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-commit": "e4add719772b9da7940f03a22d607f8c8c86a543b9260739f9a8143b89007597",
        "node_modules/@backtrack/preset-git-hooks/lib/files/pre-push": "bd2849b7a84e41755e4c74b1a3d0640914f2cf1a1a4373640aa8d6308a3c53ee",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.mts,.cts --fix .",
    "prettier \\"**/*\\" --ignore-unknown --write",
  ],
  "prepublishOnly": Array [
    "backtrack lint",
    "prettier \\"**/*\\" --ignore-unknown --check",
  ],
  "resolve": Object {
    "@backtrack/preset-git-hooks": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib",
    "@backtrack/preset-style": "<PROJECT_ROOT>/lib",
  },
}
`;
